--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/1.system-package-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/1.system-package-overview.md
@@ -46,7 +46,7 @@ PL 系统包概览
 
 |                                 系统包                                  |                      描述                       |Oracle 模式下是否支持| MySQL 模式下是否支持|
 |----------------------------------------------------------------------|-----------------------------------------------|---------|---------|
-| [DBMS_AUDIT_MGMT](2.DBMS_AUDIT_MGMT/1.dbms_audit_mgmt-overview.md)       | 用于管理审计日志。                                     |支持|不支持|
+| [DBMS_AUDIT_MGMT](2.dbms-audit-mgmt-oracle/1.dbms-audit-mgmt-overview-oracle.md)       | 用于管理审计日志。                                     |支持|不支持|
 | [DBMS_APPLICATION_INFO](3.DBMS_APPLICATION_INFO/1.dbms_application_info-overview.md)  | 用于将应用程序名称注册在数据库中以进行审计或性能跟踪。                   |支持|不支持|
 | [DBMS_CRYPTO](4.DBMS_CRYPTO/1.dbms_crypto-overview.md)           | 用于加密和解密存储的数据，可以与运行的 PL 程序一起使用，并支持加密和哈希算法。     |支持|不支持|
 | [DBMS_DEBUG](5.DBMS_DEBUG/1.dbms_debug-overview.md)            | 用于调试 PL 程序。                                   |支持|不支持|
@@ -54,16 +54,16 @@ PL 系统包概览
 | [DBMS_JOB](7.DBMS_JOB/1.dbms_job-overview.md)              | 调度和管理 Job 队列中的 Job。                           |支持|不支持|
 | [DBMS_LOB](8.DBMS_LOB/1.dbms_lob-overview.md)              | 提供用于大对象（`LOB`）数据类型 `BLOB` 和 `CLOB`（读/写）的通用程序。 |支持|不支持|
 | [DBMS_LOCK](9.DBMS_LOCK/1.dbms_lock-overview.md)             | 通过 Lock Management 服务请求，转换和释放锁。               |支持|不支持|
-| [DBMS_METADATA](10.DBMS_METADATA/1.dbms_metadata-overview.md)         | 使调用者可以轻松地从字典中检索完整的数据库对象定义（元数据）。               |支持|不支持|
-| [DBMS_OUTPUT](11.DBMS_OUTPUT/1.dbms_output-overview.md)           | 用于输入和输出信息。                                    |支持|不支持|
-| [DBMS_PLAN_CACHE](12.DBMS_PLAN_CACHE/1.dbms_plan_cache-overview.md)       | 从 Plan Cache 中移除指定 SQL。                       |支持|不支持|
-| [DBMS_RANDOM](13.DBMS_RANDOM/1.dbms_random-overview.md)           | 提供内置的随机数生成器。                                  |支持|不支持|
+| [DBMS_METADATA](10.dbms-metadata-oracle/1.dbms-metadata-overview-oracle.md)         | 使调用者可以轻松地从字典中检索完整的数据库对象定义（元数据）。               |支持|不支持|
+| [DBMS_OUTPUT](11.dbms-output-oracle/1.dbms-output-overview-oracle.md)           | 用于输入和输出信息。                                    |支持|不支持|
+| [DBMS_PLAN_CACHE](12.dbms-plan-cache-oracle/1.dbms-plan-cache-overview-oracle.md)       | 从 Plan Cache 中移除指定 SQL。                       |支持|不支持|
+| [DBMS_RANDOM](13.dbms-random-oracle/1.dbms-random-overview-oracle.md)           | 提供内置的随机数生成器。                                  |支持|不支持|
 | [DBMS_RESOURCE_MANAGER](14.DBMS_RESOURCE_MANAGER/1.dbms_resource_manager-overview.md)| 用于维护资源使用计划，资源使用组和资源计划指令。|支持|不支持|
-| [DBMS_SCHEDULER](15.DBMS_SCHEDULER/1.dbms_scheduler-overview.md)|用于管理定时任务。|支持|不支持|
-| [DBMS_SESSION](16.DBMS_SESSION/1.dbms_session_overview.md)          | 提供通过存储过程访问 SQL `ALTER SESSION` 语句和其他会话信息。     |支持|不支持|
-| [DBMS_SQL](17.DBMS_SQL/1.dbms_sql-overview.md)              | 使用动态 SQL 访问数据库。                               |支持|不支持|
-| [DBMS_STATS](18.DBMS_STATS/1.dbms_stats-overview.md)            | 查看和修改优化器为数据库对象收集的统计信息。                        |支持|支持|
-| [DBMS_UTILITY](19.DBMS_UTILITY/1.dbms_utility-overview.md)   | 提供各种实用子程序。|支持|不支持|
+| [DBMS_SCHEDULER](15.dbms-scheduler-oracle/1.dbms-scheduler-overview-oracle.md)|用于管理定时任务。|支持|不支持|
+| [DBMS_SESSION](16.dbms-session-oracle/1.dbms-session-overview-oracle.md)          | 提供通过存储过程访问 SQL `ALTER SESSION` 语句和其他会话信息。     |支持|不支持|
+| [DBMS_SQL](17.dbms-sql-oracle/1.dbms-sql-overview-oracle.md)              | 使用动态 SQL 访问数据库。                               |支持|不支持|
+| [DBMS_STATS](18.dbms-stats/1.dbms-stats-overview.md)            | 查看和修改优化器为数据库对象收集的统计信息。                        |支持|支持|
+| [DBMS_UTILITY](19.dbms-utility-oracle/1.dbms-utility-overview-oracle.md)   | 提供各种实用子程序。|支持|不支持|
 | [DBMS_XA](20.DBMS_XA/1.dbms_xa-overview.md)               | 包含 XA/Open 接口，以供应用程序在 PL 中调用 XA 接口。           |支持|不支持|
 | [DBMS_XMLGEN](21.DBMS_XMLGEN/1.dbms_xmlgen-system-package-overview.md)| 包含 XA/Open 接口，以供应用程序在 PL 中调用 XA 接口。    |支持|不支持|
 | [ODCIConst](22.ODCICONST/1.odciconst-overview.md)             | 定义适用于 PL 的常量。                                 |支持|不支持|
