--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/14.DBMS_RESOURCE_MANAGER/1.dbms_resource_manager-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/14.DBMS_RESOURCE_MANAGER/1.dbms_resource_manager-overview.md
@@ -17,13 +17,13 @@
 
 |                                   子程序                                 |           描述           |
 |--------------------------------------------------------------------------|------------------------|
-| [CREATE_CONSUMER_GROUP](2.CREATE_CONSUMER_GROUP.md)      | 创建定义资源使用组。             |
-| [CREATE_PLAN](3.CREATE_PLAN.md)                | 创建资源计划。                |
-| [CREATE_PLAN_DIRECTIVE](4.CREATE_PLAN_DIRECTIVE.md)      | 创建资源计划指令。              |
-| [DELETE_CONSUMER_GROUP](5.DELETE_CONSUMER_GROUP.md)      | 删除资源使用组。               |
-| [DELETE_PLAN](6.DELETE_PLAN.md)                | 删除指定的计划以及它所引用的所有计划指令。  |
-| [DELETE_PLAN_DIRECTIVE](7.DELETE_PLAN_DIRECTIVE.md)      | 删除资源计划指令。              |
-| [SET_CONSUMER_GROUP_MAPPING](8.SET_CONSUMER_GROUP_MAPPING.md) | 添加、删除或修改登录和运行时属性映射的条目。 |
-| [UPDATE_PLAN_DIRECTIVE](9.UPDATE_PLAN_DIRECTIVE.md)      | 更新资源计划指令。              |
+| [CREATE_CONSUMER_GROUP](2.create-consumer-group-oracle.md)      | 创建定义资源使用组。             |
+| [CREATE_PLAN](3.create-plan-oracle.md)                | 创建资源计划。                |
+| [CREATE_PLAN_DIRECTIVE](4.create-plan-directive-oracle.md)      | 创建资源计划指令。              |
+| [DELETE_CONSUMER_GROUP](5.delete-consume-group-oracle.md)      | 删除资源使用组。               |
+| [DELETE_PLAN](6.delete-plan-oracle.md)                | 删除指定的计划以及它所引用的所有计划指令。  |
+| [DELETE_PLAN_DIRECTIVE](7.delete-plan-directive-oracle.md)      | 删除资源计划指令。              |
+| [SET_CONSUMER_GROUP_MAPPING](8.set-consumer-group-mappingn-directive-oracle.md) | 添加、删除或修改登录和运行时属性映射的条目。 |
+| [UPDATE_PLAN_DIRECTIVE](9.update-plan-directive-oracle.md)      | 更新资源计划指令。              |
 
 
