--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/19.DBMS_UTILITY/1.dbms_utility-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/19.DBMS_UTILITY/1.dbms_utility-overview.md
@@ -48,25 +48,25 @@ DBMS_UTILITY 子程序概览
 
 |                                  子程序                                  |                            描述                            |
 |-----------------------------------------------------------------------|----------------------------------------------------------|
-| [ACTIVE_INSTANCES](2.ACTIVE_INSTANCES.md)       | 返回激活的实例。                                                 |
-| [COMMA_TO_TABLE](3.COMMA_TO_TABLE.md)         | 将逗号分隔的名称列表转换为 PL 名称表。                                    |
-| [CURRENT_INSTANCE](4.CURRENT_INSTANCE.md)       | 返回当前连接的实例编号。                                             |
-| [DB_VERSION](5.DB_VERSION.md)             | 返回数据库的版本信息。                                              |
-| [FORMAT_CALL_STACK](6.FORMAT_CALL_STACK.md)      | 格式化当前的调用堆栈。                                              |
-| [FORMAT_ERROR_BACKTRACE](7.FORMAT_ERROR_BACKTRACE.md) | 格式化引发异常的调用堆栈的回溯。                                         |
-| [FORMAT_ERROR_STACK](8.FORMAT_ERROR_STACK.md)     | 格式化当前的错误堆栈。                                              |
-| [GET_ENDIANNESS](9.GET_ENDIANNESS.md)         | 获取数据库平台的字节存储顺序。                                          |
-| [GET_HASH_VALUE](10.GET_HASH_VALUE.md)         | 计算给定字符串的哈希值。                                             |
-| [GET_PARAMETER_VALUE](11.GET_PARAMETER_VALUE.md)    | 获取指定 `init.ora` 参数的值。                                    |
-| [GET_SQL_HASH](12.GET_SQL_HASH.md)           | 使用 MD5 算法计算指定字符串的哈希值。                                    |
-| [GET_TIME](13.GET_TIME.md)               | 以 100 秒为单位返回当前时间。                                        |
-| [IS_BIT_SET](14.IS_BIT_SET.md)             | 检查指定 `RAW` 值中指定位的设置。                                     |
-| [IS_CLUSTER_DATABASE](15.IS_CLUSTER_DATABASE.md)    | 确定数据库是否在集群数据库模式下运行。                                      |
-| [NAME_RESOLVE](16.NAME_RESOLVE.md)           | 解析指定的名称。                                                 |
-| [NAME_TOKENIZE](17.NAME_TOKENIZE.md)          | 调用解析器来解析指定的名称。                                           |
-| [OLD_CURRENT_SCHEMA](18.OLD_CURRENT_SCHEMA.md)     | 从 `SYS_CONTEXT` ('`USERENV`', '`CURRENT_SCHEMA`') 返回会话值。 |
-| [OLD_CURRENT_USER](19.OLD_CURRENT_USER.md)       | 从 `SYS_CONTEXT` ('`USERENV`', '`CURRENT_USER`') 返回会话值。   |
-| [PORT_STRING](20.PORT_STRING.md)            | 返回唯一标识数据库版本和操作系统的字符串。                                    |
-| [TABLE_TO_COMMA](21.TABLE_TO_COMMA.md)         | 将 PL 名称表转换为逗号分隔的名称列表。                                    |
+| [ACTIVE_INSTANCES](2.active-instances-oracle.md)       | 返回激活的实例。                                                 |
+| [COMMA_TO_TABLE](3.comma-to-table-oracle.md)         | 将逗号分隔的名称列表转换为 PL 名称表。                                    |
+| [CURRENT_INSTANCE](4.current-instance-oracle.md)       | 返回当前连接的实例编号。                                             |
+| [DB_VERSION](5.db-version-oracle.md)             | 返回数据库的版本信息。                                              |
+| [FORMAT_CALL_STACK](6.format-call-stack-oracle.md)      | 格式化当前的调用堆栈。                                              |
+| [FORMAT_ERROR_BACKTRACE](7.format-error-backtrace-oracle.md) | 格式化引发异常的调用堆栈的回溯。                                         |
+| [FORMAT_ERROR_STACK](8.format-error-stack-oracle.md)     | 格式化当前的错误堆栈。                                              |
+| [GET_ENDIANNESS](9.get-endianness-oracle.md)         | 获取数据库平台的字节存储顺序。                                          |
+| [GET_HASH_VALUE](10.get-hash-value-oracle.md)         | 计算给定字符串的哈希值。                                             |
+| [GET_PARAMETER_VALUE](11.get-parameter-value-oracle.md)    | 获取指定 `init.ora` 参数的值。                                    |
+| [GET_SQL_HASH](12.get-sql-hash-oracle.md)           | 使用 MD5 算法计算指定字符串的哈希值。                                    |
+| [GET_TIME](13.get-time-oracle.md)               | 以 100 秒为单位返回当前时间。                                        |
+| [IS_BIT_SET](14.is-bit-set-oracle.md)             | 检查指定 `RAW` 值中指定位的设置。                                     |
+| [IS_CLUSTER_DATABASE](15.is-cluster-database-oracle.md)    | 确定数据库是否在集群数据库模式下运行。                                      |
+| [NAME_RESOLVE](16.name-resolve-oracle.md)           | 解析指定的名称。                                                 |
+| [NAME_TOKENIZE](17.name-tokenize-oracle.md)          | 调用解析器来解析指定的名称。                                           |
+| [OLD_CURRENT_SCHEMA](18.old-current-schema-oracle.md)     | 从 `SYS_CONTEXT` ('`USERENV`', '`CURRENT_SCHEMA`') 返回会话值。 |
+| [OLD_CURRENT_USER](19.old-current-user-oracle.md)       | 从 `SYS_CONTEXT` ('`USERENV`', '`CURRENT_USER`') 返回会话值。   |
+| [PORT_STRING](20.port-string-oracle.md)            | 返回唯一标识数据库版本和操作系统的字符串。                                    |
+| [TABLE_TO_COMMA](21.table-to-comma-oracle.md)         | 将 PL 名称表转换为逗号分隔的名称列表。                                    |
 
 
