--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/23.UTL_FILE/1.utl_file-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/23.UTL_FILE/1.utl_file-overview.md
@@ -76,16 +76,16 @@ UTL_FILE 子程序概览
 
 |                           子程序                           |                描述                 |
 |---------------------------------------------------------|-----------------------------------|
-| [FCLOSE](../23.UTL_FILE/2.FCLOSE.md)   | 关闭文件。                             |
-| [FFLUSH](../23.UTL_FILE/3.FFLUSH.md)   | 刷新缓存中的数据到文件中。                     |
-| [FOPEN](../23.UTL_FILE/4.FOPEN.md)    | 根据用户指定的信息打开文件。                    |
-| [FGETPOS](../23.UTL_FILE/5.FGETPOS.md)  | 获取文件当前被访问的位置（偏移量），以字节为单位。         |
-| [FREMOVE](../23.UTL_FILE/6.FREMOVE.md)  | 删除磁盘文件（需要相应的删除权限），类似UNIX `rm` 命令。 |
-| [FRENAME](../23.UTL_FILE/7.FRENAME.md)  | 将现有文件重命名为新名称，类似于 UNIX `mv` 命令。    |
-| [FSEEK](../23.UTL_FILE/8.FSEEK.md)    | 按指定的字节数向前或向后调整文件位置。               |
-| [NEW_LINE](../23.UTL_FILE/9.NEW_LINE.md) | 将一个或多个操作系统指定的行终止符写入文件。            |
-| [GET_LINE](../23.UTL_FILE/10.GET_LINE.md) | 读取一行文本。                           |
-| [PUT](../23.UTL_FILE/11.PUT.md)      | 将字符串写入文件。                         |
-| [PUT_LINE](../23.UTL_FILE/12.PUT_LINE.md) | 将一行写入文件，并附加操作系统指定的行终止符。           |
+| [FCLOSE](2.fclose-oracle.md)   | 关闭文件。                             |
+| [FFLUSH](3.fflush-oracle.md)   | 刷新缓存中的数据到文件中。                     |
+| [FOPEN](4.fopen-oracle.md)    | 根据用户指定的信息打开文件。                    |
+| [FGETPOS](5.fgetpos-oracle.md)  | 获取文件当前被访问的位置（偏移量），以字节为单位。         |
+| [FREMOVE](6.fremove-oracle.md)  | 删除磁盘文件（需要相应的删除权限），类似UNIX `rm` 命令。 |
+| [FRENAME](7.frename-oracle.md)  | 将现有文件重命名为新名称，类似于 UNIX `mv` 命令。    |
+| [FSEEK](8.fseek-oracle.md)    | 按指定的字节数向前或向后调整文件位置。               |
+| [NEW_LINE](9.new-line-utl-oracle.md) | 将一个或多个操作系统指定的行终止符写入文件。            |
+| [GET_LINE](10.get-line-utl-oracle.md) | 读取一行文本。                           |
+| [PUT](11.put-utl-oracle.md)      | 将字符串写入文件。                         |
+| [PUT_LINE](12.put-line-utl-oracle.md) | 将一行写入文件，并附加操作系统指定的行终止符。           |
 
 
