--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/25.UTL_I18N/1.utl_i18n-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/25.UTL_I18N/1.utl_i18n-overview.md
@@ -23,8 +23,8 @@ UTL_I18N 子程序概览
 
 |                           **子程序**                            |                      **描述**                       |
 |--------------------------------------------------------------|---------------------------------------------------|
-| [RAW_TO_CHAR](../25.UTL_I18N/2.RAW_TO_CHAR.md)   | 将未在数据库字符集中编码的 RAW 数据转换为VARCHAR 字符串。               |
-| [STRING_TO_RAW](../25.UTL_I18N/3.STRING_TO_RAW.md) | 将 VARCHAR 或 NVARCHAR 字符串转换为另一个字符集。结果以 RAW 数据类型返回。 |
+| [RAW_TO_CHAR](2.raw-to-char-oracle.md)   | 将未在数据库字符集中编码的 RAW 数据转换为VARCHAR 字符串。               |
+| [STRING_TO_RAW](3.string-to-raw-oracle.md) | 将 VARCHAR 或 NVARCHAR 字符串转换为另一个字符集。结果以 RAW 数据类型返回。 |
 
 
 
