--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/27.anydata-type/1.anydata-type-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/27.anydata-type/1.anydata-type-overview.md
@@ -100,12 +100,12 @@ ANYDATA 子程序概览
 
 |                                子程序                                |                      描述                       |
 |-------------------------------------------------------------------|-----------------------------------------------|
-| [BEGINCREATE 静态存储过程](../27.anydata-type/2.begincreate-static-stored-procedure.md) | 开始创建新的 `ANYDATA`。                             |
-| [ENDCREATE 成员存储过程](../27.anydata-type/3.endcreate-stored-procedure.md)   | 结束创建 `ANYDATA`。                               |
-| [GET\* 成员函数](../27.anydata-type/4.get-member-stored-procedure.md)         | 获取当前数据值（应为适当的类型）。                             |
-| [GETTYPE 成员函数](../27.anydata-type/5.gettype-member-function.md)       | 获取 `ANYDATA` 的类型。                             |
-| [GETTYPENAME 成员函数](../27.anydata-type/6.GET.md)   | 获取 `ANYDATA` 的完全限定类型名称。                       |
-| [PIECEWISE 成员存储过程](../27.anydata-type/7.gettypename-member-function.md)   | 将当前数据值的访问模式设置为一次属性（如果数据值属于 `TYPECODE_OBJECT`） |
-| [SET\* 成员存储过程](../27.anydata-type/8.set-member-stored-procedure.md)       | 设置当前数据值。                                      |
+| [BEGINCREATE 静态存储过程](2.begincreate-static-stored-procedure-oracle.md) | 开始创建新的 `ANYDATA`。                             |
+| [ENDCREATE 成员存储过程](3.endcreate-stored-procedure-oracle.md)   | 结束创建 `ANYDATA`。                               |
+| [GET\* 成员函数](4.get-member-stored-procedure-oracle.md)         | 获取当前数据值（应为适当的类型）。                             |
+| [GETTYPE 成员函数](5.gettype-member-function-oracle.md)       | 获取 `ANYDATA` 的类型。                             |
+| [GETTYPENAME 成员函数](6.get-oracle.md)   | 获取 `ANYDATA` 的完全限定类型名称。                       |
+| [PIECEWISE 成员存储过程](7.gettypename-member-function-oracle.md)   | 将当前数据值的访问模式设置为一次属性（如果数据值属于 `TYPECODE_OBJECT`） |
+| [SET\* 成员存储过程](8.set-member-stored-procedure-oracle.md)       | 设置当前数据值。                                      |
 
 
