--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/16.DBMS_SESSION/1.dbms_session_overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/16.DBMS_SESSION/1.dbms_session_overview.md
@@ -18,8 +18,8 @@
 
 |        子程序            |      描述       |
 |--------------------------|---------------|
-| [CLEAR_ALL_CONTEXT](2.CLEAR_ALL_CONTEXT.md) | 清除所有上下文信息。    |
-| [CLEAR_CONTEXT](3.CLEAR_CONTEXT.md)     | 清除指定的上下文信息。   |
-| [CLEAR_IDENTIFIER](4.CLEAR_IDENTIFIER.md)  | 清除标识符。        |
-| [SET_CONTEXT](5.SET_CONTEXT.md)       | 设置或重置上下文属性的值。 |
-| [SET_IDENTIFIER](6.SET_IDENTIFIER.md)    | 设置标识符。        |
+| [CLEAR_ALL_CONTEXT](2.clear-all-context-oracle.md) | 清除所有上下文信息。    |
+| [CLEAR_CONTEXT](3.clear-context-oracle.md)     | 清除指定的上下文信息。   |
+| [CLEAR_IDENTIFIER](4.clear-identifier-oracle.md)  | 清除标识符。        |
+| [SET_CONTEXT](5.set-context-oracle.md)       | 设置或重置上下文属性的值。 |
+| [SET_IDENTIFIER](6.set-identifier-oracle.md)    | 设置标识符。        |
