--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/20.DBMS_XA/1.dbms_xa-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/20.DBMS_XA/1.dbms_xa-overview.md
@@ -38,15 +38,15 @@ DBMS_XA 子程序概览
 
 |                           **子程序**                            |                    **描述**                     |
 |--------------------------------------------------------------|-----------------------------------------------|
-| [DIST_TXN_SYNC](4.DIST_TXN_SYNC.md) | 在使用 Real Application Clusters（RAC）时用于同步的恢复    |
-| [XA_COMMIT](5.XA_COMMIT.md)     | 提交 xid 指定的全局事务。                               |
-| [XA_END](6.XA_END.md)        | 将当前会话与 `xid` 指定的关联事务分支中剥离。                    |
-| [XA_FORGET](7.XA_FORGET.md)     | 要求资源管理器 RM 丢弃提交或回滚的事务分支。                      |
-| [XA_GETLASTOER](8.XA_GETLASTOER.md) | 如果先前的 XA 调用失败，则获取最后的错误代码。                     |
-| [XA_PREPARE](9.XA_PREPARE.md)    | 准备提交 `xid` 中指定的事务分支。                          |
-| [XA_RECOVER](10.XA_RECOVER.md)    | 从资源管理器 RM 获取准备好的、已提交或者已回滚（但是事务信息还没丢弃）的事务分支列表。 |
-| [XA_ROLLBACK](11.XA_ROLLBACK.md)   | 要求资源管理器 RM 回滚事务分支。                            |
-| [XA_SETTIMEOUT](12.XA_SETTIMEOUT.md) | 设置当前会话的事务超时间隔（以秒为单位）。                         |
-| [XA_START](13.XA_START.md)      | 将当前会话与 `xid` 指定的事务分支相关联。                      |
+| [DIST_TXN_SYNC](4.dist-txn-sync-oracle.md) | 在使用 Real Application Clusters（RAC）时用于同步的恢复    |
+| [XA_COMMIT](5.xa-commit-oracle.md)     | 提交 xid 指定的全局事务。                               |
+| [XA_END](6.xa-end-oracle.md)        | 将当前会话与 `xid` 指定的关联事务分支中剥离。                    |
+| [XA_FORGET](7.xa-forget-oracle.md)     | 要求资源管理器 RM 丢弃提交或回滚的事务分支。                      |
+| [XA_GETLASTOER](8.xa-getlastoer-oracle.md) | 如果先前的 XA 调用失败，则获取最后的错误代码。                     |
+| [XA_PREPARE](9.xa-prepare-oracle.md)    | 准备提交 `xid` 中指定的事务分支。                          |
+| [XA_RECOVER](10.xa-recover-oracle.md)    | 从资源管理器 RM 获取准备好的、已提交或者已回滚（但是事务信息还没丢弃）的事务分支列表。 |
+| [XA_ROLLBACK](11.xa-rollback-oracle.md)   | 要求资源管理器 RM 回滚事务分支。                            |
+| [XA_SETTIMEOUT](12.xa-settimeout-oracle.md) | 设置当前会话的事务超时间隔（以秒为单位）。                         |
+| [XA_START](13.xa-start-oracle.md)      | 将当前会话与 `xid` 指定的事务分支相关联。                      |
 
 
