--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/21.DBMS_XMLGEN/1.dbms_xmlgen-system-package-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/21.DBMS_XMLGEN/1.dbms_xmlgen-system-package-overview.md
@@ -22,7 +22,7 @@ DBMS_XMLGEN 子程序概览
 
 |                          子程序                           |              描述              |
 |--------------------------------------------------------|------------------------------|
-| [CONVERT](2.CONVERT.md) | 将 XML 数据转换为已转义或未转义的 XML 等效项。 |
+| [CONVERT](2.convert-oracle.md) | 将 XML 数据转换为已转义或未转义的 XML 等效项。 |
 
 
 
