--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/26.UTL_RAW/1.utl_raw-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/26.UTL_RAW/1.utl_raw-overview.md
@@ -22,26 +22,26 @@
 
 |                             **子程序**                |                      **描述**                       |
 |-----------------------------------------------------------------|---------------------------------------------------|
-| [BIT_AND](../26.UTL_RAW/2.BIT_AND.md)                 | 对 `RAW r1` 和 `RAW r2` 中的值执行按位逻辑“与”，并返回原始的“与” 结果。   |
-| [BIT_COMPLEMENT](../26.UTL_RAW/3.BIT_COMPLEMENT.md)   | 对 `RAW r` 中的值执行按位逻辑“补码”，并返回“补码” 结果 `RAW`。            |
-| [BIT_OR](../26.UTL_RAW/4.BIT_OR.md)            | 对 `RAW r1` 和 `RAW r2` 中的值执行按位逻辑“或”，并返回原始的“或”结果。   |
-| [BIT_XOR](../26.UTL_RAW/5.BIT_XOR.md)          | 对 `RAW r1` 和 `RAW r2` 中的值执行逐位逻辑“异或”，并返回原始的“异或”结果。 |
-| [CAST_FROM_BINARY_DOUBLE](6.CAST_FROM_BINARY_DOUBLE.md) | 以 `RAW` 的二进制形式返回 `BINARY_DOUBLE` 值。 |
-| [CAST_FROM_BINARY_FLOAT](7.CAST_FROM_BINARY_FLOAT.md)   | 以 `RAW` 的二进制形式返回 `BINARY_FLOAT` 值。  |
-| [CAST_FROM_BINARY_INTEGER](8.CAST_FROM_BINARY_INTEGER.md) | 以 `RAW` 的二进制形式返回 `BINARY_INTEGER` 值。 |
-| [CAST_FROM_NUMBER](9.CAST_FROM_NUMBER.md)               | 以 `RAW` 的二进制形式返回 `NUMBER` 值。 |
-| [CAST_TO_BINARY_DOUBLE](10.CAST_TO_BINARY_DOUBLE.md)    | 将以 `RAW` 二进制形式表示的 `BINARY_DOUBLE` 值转换为 `BINARY_DOUBLE`。  |
-| [CAST_TO_BINARY_FLOAT](11.CAST_TO_BINARY_FLOAT.md)      | 将以 `RAW` 二进制形式表示的 `BINARY_FLOAT` 值转换为 `BINARY_FLOAT`。    |
-| [CAST_TO_BINARY_INTEGER](12.CAST_TO_BINARY_INTEGER.md)  | 将以 `RAW` 二进制形式表示的 `BINARY_INTEGER` 值转换为 `BINARY_INTEGER`。|
-| [CAST_TO_NUMBER](13.CAST_TO_NUMBER.md)        | 将以 `RAW` 二进制形式表示的 `NUMBER` 值转换为 `NUMBER`。  |
-| [CAST_TO_RAW](6.CAST_FROM_BINARY_DOUBLE.md)           | 将 `VARCHAR2` 值转换为 `RAW` 值。              |
-| [CAST_TO_VARCHAR2](7.CAST_FROM_BINARY_FLOAT.md) | 将 `RAW` 值转换为 `VARCHAR2` 值。              |
-| [COPIES](18.COPIES.md)           | 返回串联在一起的 `r` 的 `n` 个副本。                      |
-| [COMPARE](9.CAST_FROM_NUMBER.md)         | 比较 `RAW r1` 和 `RAW r2`。                             |
-| [CONCAT](10.CAST_TO_BINARY_DOUBLE.md)        | 将最多 12 个 `RAW` 串连到一个 `RAW` 中。                  |
-| [LENGTH](11.CAST_TO_BINARY_FLOAT.md)        | 返回 `RAW r` 的字节长度。                                |
-| [REVERSE](12.CAST_TO_BINARY_INTEGER.md)        | 从端到端反转 `RAW r` 中的字节序列。                       |
-| [SUBSTR](13.CAST_TO_NUMBER.md)    | 返回 `len` 字节数，从 `RAW r` 的 `pos` 位开始计算。       |
+| [BIT_AND](2.bit-and-oracle.md)                 | 对 `RAW r1` 和 `RAW r2` 中的值执行按位逻辑“与”，并返回原始的“与” 结果。   |
+| [BIT_COMPLEMENT](3.bit-complement-oracle.md)   | 对 `RAW r` 中的值执行按位逻辑“补码”，并返回“补码” 结果 `RAW`。            |
+| [BIT_OR](4.bit-or-oracle.md)            | 对 `RAW r1` 和 `RAW r2` 中的值执行按位逻辑“或”，并返回原始的“或”结果。   |
+| [BIT_XOR](5.bit-xor-oracle.md)          | 对 `RAW r1` 和 `RAW r2` 中的值执行逐位逻辑“异或”，并返回原始的“异或”结果。 |
+| [CAST_FROM_BINARY_DOUBLE](6.cast-from-binary-double-oracle.md) | 以 `RAW` 的二进制形式返回 `BINARY_DOUBLE` 值。 |
+| [CAST_FROM_BINARY_FLOAT](7.cast-from-binary-float-oracle.md)   | 以 `RAW` 的二进制形式返回 `BINARY_FLOAT` 值。  |
+| [CAST_FROM_BINARY_INTEGER](8.cast-from-binary-integer-oracle.md) | 以 `RAW` 的二进制形式返回 `BINARY_INTEGER` 值。 |
+| [CAST_FROM_NUMBER](9.cast-from-number-oracle.md)               | 以 `RAW` 的二进制形式返回 `NUMBER` 值。 |
+| [CAST_TO_BINARY_DOUBLE](10.cast-to-binary-double-oracle.md)    | 将以 `RAW` 二进制形式表示的 `BINARY_DOUBLE` 值转换为 `BINARY_DOUBLE`。  |
+| [CAST_TO_BINARY_FLOAT](11.cast-to-binary-float-oracle.md)      | 将以 `RAW` 二进制形式表示的 `BINARY_FLOAT` 值转换为 `BINARY_FLOAT`。    |
+| [CAST_TO_BINARY_INTEGER](12.cast-to-binary-integer-oracle.md)  | 将以 `RAW` 二进制形式表示的 `BINARY_INTEGER` 值转换为 `BINARY_INTEGER`。|
+| [CAST_TO_NUMBER](13.cast-to-number-oracle.md)        | 将以 `RAW` 二进制形式表示的 `NUMBER` 值转换为 `NUMBER`。  |
+| [CAST_TO_RAW](14.cast-to-raw-oracle.md)           | 将 `VARCHAR2` 值转换为 `RAW` 值。              |
+| [CAST_TO_VARCHAR2](15.cast-to-varchar2-oracle.md) | 将 `RAW` 值转换为 `VARCHAR2` 值。              |
+| [COPIES](18.copies-oracle.md)           | 返回串联在一起的 `r` 的 `n` 个副本。                      |
+| [COMPARE](16.compare-oracle.md)         | 比较 `RAW r1` 和 `RAW r2`。                             |
+| [CONCAT](17.concat-utl-oracle.md)        | 将最多 12 个 `RAW` 串连到一个 `RAW` 中。                  |
+| [LENGTH](19.length-utl-oracle.md)        | 返回 `RAW r` 的字节长度。                                |
+| [REVERSE](20.reverse-oracle.md)        | 从端到端反转 `RAW r` 中的字节序列。                       |
+| [SUBSTR](21.substr-utl-oracle.md)    | 返回 `len` 字节数，从 `RAW r` 的 `pos` 位开始计算。       |
 
 
 
