--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/1.system-package-overview.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/1.system-package-overview.md
@@ -47,13 +47,13 @@ PL 系统包概览
 |                                 系统包                                  |                      描述                       |Oracle 模式下是否支持| MySQL 模式下是否支持|
 |----------------------------------------------------------------------|-----------------------------------------------|---------|---------|
 | [DBMS_AUDIT_MGMT](2.dbms-audit-mgmt-oracle/1.dbms-audit-mgmt-overview-oracle.md)       | 用于管理审计日志。                                     |支持|不支持|
-| [DBMS_APPLICATION_INFO](3.DBMS_APPLICATION_INFO/1.dbms_application_info-overview.md)  | 用于将应用程序名称注册在数据库中以进行审计或性能跟踪。                   |支持|不支持|
-| [DBMS_CRYPTO](4.DBMS_CRYPTO/1.dbms_crypto-overview.md)           | 用于加密和解密存储的数据，可以与运行的 PL 程序一起使用，并支持加密和哈希算法。     |支持|不支持|
-| [DBMS_DEBUG](5.DBMS_DEBUG/1.dbms_debug-overview.md)            | 用于调试 PL 程序。                                   |支持|不支持|
-| [DBMS_DESCRIBE](6.DBMS_DESCRIBE/1.dbms_describe-overview.md)         | 获取 PL 对象的有关信息。                                |支持|不支持|
-| [DBMS_JOB](7.DBMS_JOB/1.dbms_job-overview.md)              | 调度和管理 Job 队列中的 Job。                           |支持|不支持|
-| [DBMS_LOB](8.DBMS_LOB/1.dbms_lob-overview.md)              | 提供用于大对象（`LOB`）数据类型 `BLOB` 和 `CLOB`（读/写）的通用程序。 |支持|不支持|
-| [DBMS_LOCK](9.DBMS_LOCK/1.dbms_lock-overview.md)             | 通过 Lock Management 服务请求，转换和释放锁。               |支持|不支持|
+| [DBMS_APPLICATION_INFO](3.dbms-application-info-oracle/1.dbms-application-info-overview-oracle.md)  | 用于将应用程序名称注册在数据库中以进行审计或性能跟踪。                   |支持|不支持|
+| [DBMS_CRYPTO](4.dbms-crypto-oracle/1.dbms-crypto-overview-oracle.md)           | 用于加密和解密存储的数据，可以与运行的 PL 程序一起使用，并支持加密和哈希算法。     |支持|不支持|
+| [DBMS_DEBUG](5.dbms-debug-oracle/1.dbms-debug-overview-oracle.md)            | 用于调试 PL 程序。                                   |支持|不支持|
+| [DBMS_DESCRIBE](6.dbms-describe-oracle/1.dbms-describe-overview-oracle.md)         | 获取 PL 对象的有关信息。                                |支持|不支持|
+| [DBMS_JOB](7.dbms-job-oracle/1.dbms-job-overview-oracle.md)              | 调度和管理 Job 队列中的 Job。                           |支持|不支持|
+| [DBMS_LOB](8.dbms-lob-oracle/1.dbms-lob-overview-oracle.md)              | 提供用于大对象（`LOB`）数据类型 `BLOB` 和 `CLOB`（读/写）的通用程序。 |支持|不支持|
+| [DBMS_LOCK](9.dbms-lock-oracle/1.dbms-lock-overview-oracle.md)             | 通过 Lock Management 服务请求，转换和释放锁。               |支持|不支持|
 | [DBMS_METADATA](10.dbms-metadata-oracle/1.dbms-metadata-overview-oracle.md)         | 使调用者可以轻松地从字典中检索完整的数据库对象定义（元数据）。               |支持|不支持|
 | [DBMS_OUTPUT](11.dbms-output-oracle/1.dbms-output-overview-oracle.md)           | 用于输入和输出信息。                                    |支持|不支持|
 | [DBMS_PLAN_CACHE](12.dbms-plan-cache-oracle/1.dbms-plan-cache-overview-oracle.md)       | 从 Plan Cache 中移除指定 SQL。                       |支持|不支持|
@@ -64,12 +64,12 @@ PL 系统包概览
 | [DBMS_SQL](17.dbms-sql-oracle/1.dbms-sql-overview-oracle.md)              | 使用动态 SQL 访问数据库。                               |支持|不支持|
 | [DBMS_STATS](18.dbms-stats/1.dbms-stats-overview.md)            | 查看和修改优化器为数据库对象收集的统计信息。                        |支持|支持|
 | [DBMS_UTILITY](19.dbms-utility-oracle/1.dbms-utility-overview-oracle.md)   | 提供各种实用子程序。|支持|不支持|
-| [DBMS_XA](20.DBMS_XA/1.dbms_xa-overview.md)               | 包含 XA/Open 接口，以供应用程序在 PL 中调用 XA 接口。           |支持|不支持|
-| [DBMS_XMLGEN](21.DBMS_XMLGEN/1.dbms_xmlgen-system-package-overview.md)| 包含 XA/Open 接口，以供应用程序在 PL 中调用 XA 接口。    |支持|不支持|
-| [ODCIConst](22.ODCICONST/1.odciconst-overview.md)             | 定义适用于 PL 的常量。                                 |支持|不支持|
-| [UTL_FILE](23.UTL_FILE/1.utl_file-overview.md)              | 使 PL 程序能够读写操作系统文本文件并提供标准操作系统流文件 I/O 的受限版本。    |支持|不支持|
-| [UTL_ENCODE](24.UTL_ENCODE/1.utl_encode-overview.md)            | 将 RAW 数据编码为标准格式的功能，以便可以在主机之间传输数据。             |支持|不支持|
-| [UTL_I18N](25.UTL_I18N/1.utl_i18n-overview.md)              | 为使用 PL 编写的应用程序提供了一组服务（全球化服务）。                 |支持|不支持|
-| [UTL_RAW](26.UTL_RAW/1.utl_raw-overview.md)               | 提供用于处理 `RAW` 数据类型的 SQL 函数。                    |支持|不支持|
-| [ANYDATA TYPE](27.anydata-type/1.anydata-type-overview.md)| 包含给定类型的实例，以及对该类型的描述。|支持|不支持|
-| [XMLType](28.XMLType/1.xmltype-overview.md)| 用于处理 XML 数据。 |支持|不支持|
+| [DBMS_XA](20.dbms-xa-oracle/1.dbms-xa-overview-oracle.md)               | 包含 XA/Open 接口，以供应用程序在 PL 中调用 XA 接口。           |支持|不支持|
+| [DBMS_XMLGEN](21.dbms-xmlgen-oracle/1.dbms-xmlgen-system-package-overview-oracle.md)| 包含 XA/Open 接口，以供应用程序在 PL 中调用 XA 接口。    |支持|不支持|
+| [ODCIConst](22.odciconst-oracle/1.odciconst-overview-oracle.md)             | 定义适用于 PL 的常量。                                 |支持|不支持|
+| [UTL_FILE](23.utl-file-oracle/1.utl-file-overview-oracle.md)              | 使 PL 程序能够读写操作系统文本文件并提供标准操作系统流文件 I/O 的受限版本。    |支持|不支持|
+| [UTL_ENCODE](24.utl-encode-oracle/1.utl-encode-overview-oracle.md)            | 将 RAW 数据编码为标准格式的功能，以便可以在主机之间传输数据。             |支持|不支持|
+| [UTL_I18N](25.utl-i18n-oracle/1.utl-i18n-overview-oracle.md)              | 为使用 PL 编写的应用程序提供了一组服务（全球化服务）。                 |支持|不支持|
+| [UTL_RAW](26.utl-raw-oracle/1.utl-raw-overview-oracle.md)               | 提供用于处理 `RAW` 数据类型的 SQL 函数。                    |支持|不支持|
+| [ANYDATA TYPE](27.anydata-type-oracle/1.anydata-type-overview-oracle.md)| 包含给定类型的实例，以及对该类型的描述。|支持|不支持|
+| [XMLType](28.xmltype-oracle/1.xmltype-overview-oracle.md)| 用于处理 XML 数据。 |支持|不支持|
