--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.DBMS_LOB/13.READ.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.DBMS_LOB/13.READ.md
@@ -36,7 +36,7 @@ buffer    OUT            VARCHAR2 CHARACTER SET ANY_CS);
 
 |  **参数**  |                                    **解释**                                     |
 |----------|-------------------------------------------------------------------------------|
-| lob_loc  | 要读取的 `LOB` 的定位器。详细信息请参见 [DBMS_LOB 使用说明](../8.DBMS_LOB/1.dbms_lob-overview.md)。 |
+| lob_loc  | 要读取的 `LOB` 的定位器。详细信息请参见 [DBMS_LOB 使用说明](8.dbms-lob-oracle/1.dbms-lob-overview-oracle.md)。 |
 | file_loc | 要检查的 `LOB` 的文件定位器。                                                            |
 | amount   | 要读取的字节数（对于 `BLOB`）或字符（对于 `CLOB`），或者已读取的数字。                                    |
 | offset   | 开始读取 `LOB` 的偏移量。                                                              |
