--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.DBMS_LOB/6.CREATETEMPORARY.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/8.DBMS_LOB/6.CREATETEMPORARY.md
@@ -33,7 +33,7 @@ dur     IN            PLS_INTEGER := 10);
 
 |   参数    |                                             解释                                             |
 |---------|--------------------------------------------------------------------------------------------|
-| lob_loc | `LOB` 的定位器。详细信息请参见 [DBMS_LOB 使用说明。](../8.DBMS_LOB/1.dbms_lob-overview.md)                   |
+| lob_loc | `LOB` 的定位器。详细信息请参见 [DBMS_LOB 使用说明。](8.dbms-lob-oracle/1.dbms-lob-overview-oracle.md)                   |
 | cache   | 指定是否应将 `LOB` 读入缓冲区缓存。                                                                      |
 | dur     | 2 个预定义的持续时间值中的 1个（`SESSION` 或 `CALL`），用于指定在会话或呼叫结束时是否清除临时 `LOB` 的提示。如果省略了 `dur`，则使用会话持续时间。 |
 
