--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/8.alter-system-flush-plan-cache-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/8.alter-system-flush-plan-cache-of-oracle-mode.md
@@ -6,7 +6,7 @@
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>对于 Oracle 租户，如果要清除租户下指定 SQL 或 Schema 的计划缓存，需要使用 <a href="../../../../3.pl-reference/4.pl-system-package/12.DBMS_PLAN_CACHE/1.dbms_plan_cache-overview.md">DBMS_PLAN_CACHE</a> 系统包。</p>
+    <p>对于 Oracle 租户，如果要清除租户下指定 SQL 或 Schema 的计划缓存，需要使用 <a href="../../../../3.pl-reference/4.pl-system-package/12.dbms-plan-cache-oracle/1.dbms-plan-cache-overview-oracle.md">DBMS_PLAN_CACHE</a> 系统包。</p>
   </main>
 
 ## 语法
