--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/20.DBMS_XA/13.XA_START.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/20.DBMS_XA/13.XA_START.md
@@ -28,15 +28,15 @@ RETURN PLS_INTEGER;
 
 | **参数** |                                  **解释**                                   |
 |--------|---------------------------------------------------------------------------|
-| xid    | 请参见 [DBMS_XA_XID 对象类型](3.the-type-of-the-dbms_xa_xid-object.md) 。 |
-| flag   | 请参见 [DBMS__XA 常量](2.dbms_xa-constant.md) 。     |
+| xid    | 请参见 [DBMS_XA_XID 对象类型](3.the-type-of-the-dbms-xa-xid-object-oracle.md) 。 |
+| flag   | 请参见 [DBMS__XA 常量](2.dbms-xa-constant-oracle.md) 。     |
 
 
 
 返回值 
 ------------
 
-请参见 [DBMS_XA 可能的常量返回值](2.dbms_xa-constant.md)。
+请参见 [DBMS_XA 可能的常量返回值](2.dbms-xa-constant-oracle.md)。
 
 使用说明 
 -------------------------
