--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/20.DBMS_XA/5.XA_COMMIT.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/4.pl-system-package/20.DBMS_XA/5.XA_COMMIT.md
@@ -28,7 +28,7 @@ RETURN PLS_INTEGER;
 
 |  **参数**  |                                **解释**                                |
 |----------|----------------------------------------------------------------------|
-| xid      | 请参见 [DBMS_XA_XID 对象类型](3.the-type-of-the-dbms_xa_xid-object.md)。 |
+| xid      | 请参见 [DBMS_XA_XID 对象类型](3.the-type-of-the-dbms-xa-xid-object-oracle.md)。 |
 | onePhase | 如果值为 TRUE，则应用一阶段提交。                                                  |
 
 
@@ -36,7 +36,7 @@ RETURN PLS_INTEGER;
 返回值 
 ------------
 
-请参见 [DBMS_XA 可能的常量返回值](2.dbms_xa-constant.md)。
+请参见 [DBMS_XA 可能的常量返回值](2.dbms-xa-constant-oracle.md)。
 
 可能返回的错误码是：XAER_RMERR、XAER_RMFAIL、XAER_NOTA、XAER_INVAL 或 XAER_PROTO。 其他可能的返回值包括：XA_OK、XA_RB \*、XA_HEURHAZ、XA_HEURCOM、XA_HEURRB 和 XA_HEURMIX。
 
