--- a/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
@@ -468,7 +468,7 @@ Query OK, 0 rows affected
 
 In this example, KEY partitioning supports a string column as the partitioning key. Therefore, you can use the `col2` column as the subpartitioning key. `sp0`, ..., and `sp7` are subpartition names. 
 
-## Subsequent operations
+## What to do next
 
 * [Create an index](4.create-a-index-of-mysql-mode.md)
 
