--- a/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/2.update-data.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/2.update-data.md
@@ -6,7 +6,7 @@ After you insert data into a table, you can use the `UPDATE` statement or other 
 
 Before you update the data in a table, make sure that:
 
-* You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../../1.application-development-based-on-mysql-mode/1.database-connection/1.connection-mode-overview.md). 
+* You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md). 
 
    > **Note**
    >
