--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/38.dbms-crypto-oracle/3.decrypt-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/38.dbms-crypto-oracle/3.decrypt-oracle.md
@@ -43,7 +43,7 @@ DBMS_CRYPTO.DECRYPT(
 
   
 
-* 如果 `VARCHAR2` 数据在加密前转换为原始数据，则必须使用 UTL_18n 包将其转换回适当的数据库字符集。
+* 如果 `VARCHAR2` 数据在加密前转换为原始数据，则必须使用 UTL_I18N 包将其转换回适当的数据库字符集。
 
   
 
