--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/2.join-algorithm.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/6.query-optimization/2.join-algorithm/2.join-algorithm.md
@@ -109,7 +109,7 @@ Outputs & filters:
   2 - output([T2.C1], [T2.C2]), filter(nil), 
       access([T2.C1], [T2.C2]), partitions(p0)
 
-obclient> EXPLAIN SELECT /*+USE_NL(t1, c2)*/* FROM  t1, t2 WHERE t1.c1 = t2.c1;
+obclient> EXPLAIN SELECT /*+USE_NL(t1, t2)*/* FROM  t1, t2 WHERE t1.c1 = t2.c1;
 +-----------------------------------------------------------------+
 | Query Plan                                                                              |
 +-----------------------------------------------------------------+
